# GrafosOptimizacion

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  camino_critico.go  compresion.go  dijkstra.go  floyd.go  flujos.go  fly.toml  go.mod  go.sum  grafos_test.go  index.html  kruskal.go  main.go  notas.md  pert.go  ruta_critica.go  style.css  utils.go
.github/workflows/: compile_ts.yml
js/: examples.js  examples.ts  hpcc-js.min.js  index.js  index.ts  model.ts  renders.js  renders.ts  tsconfig.json  utils.js  utils.ts
methods/: compresion.go  critical_path.go  dijkstra.go  floyd.go  flujos.go  grafos_test.go  kruskal.go  pert.go  ruta_critica.go  utils.go
src/: compression.rs  critical_path.rs  floyd_warshall.rs  handles.rs  kruskal.rs  main.rs  max_flow.rs  pert.rs  utils.rs
static/: index.html  style.css
