[package]
name = "grafos_optimizacion"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.3.5", features = ["trace", "fs", "compression-gzip"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
