[package]
name = "grafos_optimizacion"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.4.0", features = ["trace", "fs", "compression-gzip"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
